--- a/products.html
+++ b/products.html
@@ -123,7 +123,7 @@
 
   <footer class="footer text-faded text-center py-5">
     <div class="container">
-      <p class="m-0 small">Copyright &copy; Your Website 2019</p>
+      <p class="m-0 small">Copyright &copy; Hoàng Yến 2020</p>
     </div>
   </footer>
 
