--- a/about.html
+++ b/about.html
@@ -66,11 +66,10 @@
           <div class="col-xl-9 col-lg-10 mx-auto">
             <div class="bg-faded rounded p-5">
               <h2 class="section-heading mb-4">
-                <span class="section-heading-upper">Strong Coffee, Strong Roots</span>
-                <span class="section-heading-lower">About Our Cafe</span>
+                <span class="section-heading-upper">Cà phê sạch, Uống là Phê!</span>
+                <span class="section-heading-lower">Một vài điều về quán</span>
               </h2>
-              <p>Founded in 1987 by the Hernandez brothers, our establishment has been serving up rich coffee sourced from artisan farmers in various regions of South and Central America. We are dedicated to travelling the world, finding the best coffee, and bringing back to you here in our cafe.</p>
-              <p class="mb-0">We guarantee that you will fall in <em>lust</em> with our decadent blends the moment you walk inside until you finish your last sip. Join us for your daily routine, an outing with friends, or simply just to enjoy some alone time.</p>
+              <p>Quán nằm trên đường 34 Nguyễn Chí Thanh-Thị trấn Buôn Trấp . Phần vỉa hè dưới mái hiên rộng rãi cũng bao quanh mặt phố là nơi được yêu thích nhất, tại đó đặt nhiều bàn ghế nhỏ và giản đơn. Hai gian bên trong không rộng lắm, trần cao và ánh nắng lọt vào không nhiều nên không gian thoáng đạt và bình yên, lơ thơ vài bộ bàn ghế kê gần góc và cửa sổ</p>
             </div>
           </div>
         </div>
