--- a/store.html
+++ b/store.html
@@ -64,52 +64,56 @@
           <div class="col-xl-9 mx-auto">
             <div class="cta-inner text-center rounded">
               <h2 class="section-heading mb-5">
-                <span class="section-heading-upper">Come On In</span>
+                <span class="section-heading-upper">Giờ hoạt động của quán</span>
                 <span class="section-heading-lower">We're Open</span>
               </h2>
               <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
                 <li class="list-unstyled-item list-hours-item d-flex">
-                  Sunday
-                  <span class="ml-auto">Closed</span>
+                  Chủ Nhật
+                  <span class="ml-auto">6:00 AM to 9:00 PM</span>
                 </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
-                  Monday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
+                  Thứ 2
+                  <span class="ml-auto">6:00 AM to 9:00 PM</span>
                 </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
-                  Tuesday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
+                  Thứ 3
+                  <span class="ml-auto">6:00 AM to 9:00 PM</span>
                 </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
-                  Wednesday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
+                  Thứ 4
+                  <span class="ml-auto">6:00 AM to 9:00 PM</span>
                 </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
-                  Thursday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
+                  Thứ 5
+                  <span class="ml-auto">6:00 AM to 9:00 PM</span>
                 </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
-                  Friday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
+                  Thứ 6
+                  <span class="ml-auto">6:00 AM to 9:00 PM</span>
                 </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
-                  Saturday
-                  <span class="ml-auto">9:00 AM to 5:00 PM</span>
+                  Thứ 7
+                  <span class="ml-auto">6:00 AM to 9:00 PM</span>
                 </li>
               </ul>
+              <em> 
+                (Lễ,Tết quán đóng cửa)
+                <br>
+              </em>
               <p class="address mb-5">
                 <em>
-                  <strong>1116 Orchard Street</strong>
+                  <strong>34 Nguyễn Chí Thanh</strong>
                   <br>
-                  Golden Valley, Minnesota
+                  Buôn Trấp,Krông Ana
                 </em>
               </p>
               <p class="mb-0">
                 <small>
-                  <em>Call Anytime</em>
+                  <em>Liên Hệ</em>
                 </small>
                 <br>
-                (317) 585-8468
+                +84 356 853 882
               </p>
             </div>
           </div>
