--- a/products.html
+++ b/products.html
@@ -64,15 +64,15 @@
         <div class="product-item-title d-flex">
           <div class="bg-faded p-5 d-flex ml-auto rounded">
             <h2 class="section-heading mb-0">
-              <span class="section-heading-upper">Blended to Perfection</span>
-              <span class="section-heading-lower">Coffees &amp; Teas</span>
+              <span class="section-heading-upper">Pha Phin</span>
+              <span class="section-heading-lower">Cà phê &amp; Trà</span>
             </h2>
           </div>
         </div>
         <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-01.jpg" alt="">
         <div class="product-item-description d-flex mr-auto">
           <div class="bg-faded p-5 rounded">
-            <p class="mb-0">We take pride in our work, and it shows. Every time you order a beverage from us, we guarantee that it will be an experience worth having. Whether it's our world famous Venezuelan Cappuccino, a refreshing iced herbal tea, or something as simple as a cup of speciality sourced black coffee, you will be coming back for more.</p>
+            <p class="mb-0">Pha phin là cách pha chế (chiết xuất) cà phê lâu đời và độc đáo của người Việt. Đáy phin được thiết kế có nhiều lỗ nhỏ li ti, chỉ vừa đủ cho dòng nước cà phê nhỏ giọt đi qua. Cà phê pha phin toát ra vẹn tròn tinh túy của cà phê, vị đậm nồng nàn, hương thơm say mê.</p>
           </div>
         </div>
       </div>
@@ -85,15 +85,15 @@
         <div class="product-item-title d-flex">
           <div class="bg-faded p-5 d-flex mr-auto rounded">
             <h2 class="section-heading mb-0">
-              <span class="section-heading-upper">Delicious Treats, Good Eats</span>
-              <span class="section-heading-lower">Bakery &amp; Kitchen</span>
+              <span class="section-heading-upper">Nước Giải Khát</span>
+              <span class="section-heading-lower">Beer &amp; Nước Ngọt</span>
             </h2>
           </div>
         </div>
         <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-02.jpg" alt="">
         <div class="product-item-description d-flex ml-auto">
           <div class="bg-faded p-5 rounded">
-            <p class="mb-0">Our seasonal menu features delicious snacks, baked goods, and even full meals perfect for breakfast or lunchtime. We source our ingredients from local, oragnic farms whenever possible, alongside premium vendors for specialty goods.</p>
+            <p class="mb-0">Quán có đầy đủ các loại nước giải khát với giá cả phải chăn giúp bạn tận hưởng những giây phút tuyệt vời của cuộc sống!</p>
           </div>
         </div>
       </div>
@@ -106,15 +106,15 @@
         <div class="product-item-title d-flex">
           <div class="bg-faded p-5 d-flex ml-auto rounded">
             <h2 class="section-heading mb-0">
-              <span class="section-heading-upper">From Around the World</span>
-              <span class="section-heading-lower">Bulk Speciality Blends</span>
+              <span class="section-heading-upper">Sản Phẩm Khác</span>
+              <span class="section-heading-lower">Quán Tạp Hóa</span>
             </h2>
           </div>
         </div>
         <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-03.jpg" alt="">
         <div class="product-item-description d-flex mr-auto">
           <div class="bg-faded p-5 rounded">
-            <p class="mb-0">Travelling the world for the very best quality coffee is something take pride in. When you visit us, you'll always find new blends from around the world, mainly from regions in Central and South America. We sell our blends in smaller to large bulk quantities. Please visit us in person for more details.</p>
+            <p class="mb-0"> Ngoài ra quán còn bán đồ thiết yếu cho sinh hoạt như kem đánh răng, bóp đánh răng, giấy vệ sinh, băng vệ sinh, các đồ phục vụ cho học tập như bảng, thước kẻ, bút, mực, các loại đồ ăn nhanh... đa số hàng hóa đều rẻ và điều tiện lợi.</p>
           </div>
         </div>
       </div>
