--- a/store.html
+++ b/store.html
@@ -129,13 +129,10 @@
             <div class="col-xl-9 col-lg-10 mx-auto">
               <div class="bg-faded rounded p-5">
                 <h2 class="section-heading mb-4">
-                  <span class="section-heading-upper">Strong Coffee, Strong Roots</span>
-                  <span class="section-heading-lower">About Our Cafe</span>
+                  <span class="section-heading-upper">Cà Phê Sạch, Uống Là Phê</span>
+                  <span class="section-heading-lower">Hãy đến với chúng tôi để tận hưởng!</span>
                 </h2>
-                <p>Founded in 1987 by the Hernandez brothers, our establishment has been serving up rich coffee sourced from artisan farmers in various regions of South and Central America. We are dedicated to travelling the world, finding the best coffee, and bringing back to you here in our cafe.</p>
-                <p class="mb-0">We guarantee that you will fall in
-                  <em>lust</em>
-                  with our decadent blends the moment you walk inside until you finish your last sip. Join us for your daily routine, an outing with friends, or simply just to enjoy some alone time.</p>
+                <p>Chú trọng vào chất lượng và trải nghiệm, tất cả đồ uống  tại Hoàng Yến đều được chế biến bằng nguyên liệu cà phê đặc sản. Mỗi thìa cà phê  là sự kết hợp hài hoà của Sữa đặc ngậy ngọt, cà phê thơm đậm, thoảng vị đắng. Cà phê  như tan ra trong miệng, để lại hậu vị ngọt sâu, êm và dễ chịu đến bất ngờ.</p>
               </div>
             </div>
           </div>
