--- a/products.html
+++ b/products.html
@@ -69,7 +69,7 @@
             </h2>
           </div>
         </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-01.jpg" alt="">
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="caPhe.jpg" alt="">
         <div class="product-item-description d-flex mr-auto">
           <div class="bg-faded p-5 rounded">
             <p class="mb-0">Pha phin là cách pha chế (chiết xuất) cà phê lâu đời và độc đáo của người Việt. Đáy phin được thiết kế có nhiều lỗ nhỏ li ti, chỉ vừa đủ cho dòng nước cà phê nhỏ giọt đi qua. Cà phê pha phin toát ra vẹn tròn tinh túy của cà phê, vị đậm nồng nàn, hương thơm say mê.</p>
@@ -90,7 +90,7 @@
             </h2>
           </div>
         </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-02.jpg" alt="">
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="Beer.jpg" alt="">
         <div class="product-item-description d-flex ml-auto">
           <div class="bg-faded p-5 rounded">
             <p class="mb-0">Quán có đầy đủ các loại nước giải khát với giá cả phải chăn giúp bạn tận hưởng những giây phút tuyệt vời của cuộc sống!</p>
@@ -111,7 +111,7 @@
             </h2>
           </div>
         </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-03.jpg" alt="">
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="QuanTapHoa.jpg" alt="">
         <div class="product-item-description d-flex mr-auto">
           <div class="bg-faded p-5 rounded">
             <p class="mb-0"> Ngoài ra quán còn bán đồ thiết yếu cho sinh hoạt như kem đánh răng, bóp đánh răng, giấy vệ sinh, băng vệ sinh, các đồ phục vụ cho học tập như bảng, thước kẻ, bút, mực, các loại đồ ăn nhanh... đa số hàng hóa đều rẻ và điều tiện lợi.</p>
