--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
     <div class="container">
-      <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Cà Phê Hoàng Yến</a>
+      <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none"  href="index.html">Cà Phê Hoàng Yến</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -70,7 +70,9 @@
           <p class="mb-3">Công thức rang và phối trộn hạt Arabica và Robusta của Hoàng Yến Coffee tạo nên một tổng thể cân bằng của vị đắng, ngọt, chua, giúp cà phê đậm thanh, thơm hương.
           </p>
           <div class="intro-button mx-auto">
-            <a class="btn btn-primary btn-xl" href="https://goo.gl/maps/WuEPC8QPMjS7DtkK8">Hãy ghé quán ngay hôm nay!</a>
+            <a class="btn btn-primary btn-xl" href="https://goo.gl/maps/WuEPC8QPMjS7DtkK8">
+              Hãy ghé quán ngay hôm nay!<br>(Bản đồ)
+            </a>
           </div>
         </div>
       </div>
