--- a/about.html
+++ b/about.html
@@ -26,14 +26,14 @@
 <body>
 
   <h1 class="site-heading text-center text-white d-none d-lg-block">
-    <span class="site-heading-upper text-primary mb-3">Quán Cà Phê Hoàng Yến</span>
+    <span class="site-heading-upper text-primary mb-3" href="index.html">Quán Cà Phê Hoàng Yến</span>
     <span class="site-heading-lower">Xin Kính Chào Quý Khách!</span>
   </h1>
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
     <div class="container">
-      <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Cà Phê Hoàng Yến</a>
+      <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none"  href="index.html">Cà Phê Hoàng Yến</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -69,7 +69,7 @@
                 <span class="section-heading-upper">Cà phê sạch, Uống là Phê!</span>
                 <span class="section-heading-lower">Một vài điều về quán</span>
               </h2>
-              <p>Quán nằm trên đường 34 Nguyễn Chí Thanh-Thị trấn Buôn Trấp . Phần vỉa hè dưới mái hiên rộng rãi cũng bao quanh mặt phố là nơi được yêu thích nhất, tại đó đặt nhiều bàn ghế nhỏ và giản đơn. Hai gian bên trong không rộng lắm, trần cao và ánh nắng lọt vào không nhiều nên không gian thoáng đạt và bình yên, lơ thơ vài bộ bàn ghế kê gần góc và cửa sổ</p>
+              <p>Quán nằm trên đường 34 Nguyễn Chí Thanh-Thị trấn Buôn Trấp . Phần vỉa hè dưới mái hiên rộng rãi cũng bao quanh mặt phố là nơi được yêu thích nhất, tại đó đặt nhiều bàn ghế nhỏ và giản đơn. Không gian bên trong  rộng rãi, trần cao và ánh nắng lọt vào qua các ô cửa nên không gian thoáng đạt và bình yên, lơ thơ vài bộ bàn ghế kê gần góc.</p>
             </div>
           </div>
         </div>
