--- a/products.html
+++ b/products.html
@@ -106,7 +106,7 @@
         <div class="product-item-title d-flex">
           <div class="bg-faded p-5 d-flex ml-auto rounded">
             <h2 class="section-heading mb-0">
-              <span class="section-heading-upper">Sản Phẩm Khác</span>
+              <span class="section-heading-upper">Tiện Ích Đi Kèm</span>
               <span class="section-heading-lower">Quán Tạp Hóa</span>
             </h2>
           </div>
@@ -114,7 +114,7 @@
         <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="QuanTapHoa.jpg" alt="">
         <div class="product-item-description d-flex mr-auto">
           <div class="bg-faded p-5 rounded">
-            <p class="mb-0"> Ngoài ra quán còn bán đồ thiết yếu cho sinh hoạt như kem đánh răng, bóp đánh răng, giấy vệ sinh, băng vệ sinh, các đồ phục vụ cho học tập như bảng, thước kẻ, bút, mực, các loại đồ ăn nhanh... đa số hàng hóa đều rẻ và điều tiện lợi.</p>
+            <p class="mb-0"> Nằm bên cạnh quán tạp hóa chung chủ nên bạn có thể Thuận tiện mua sắm các món đồ thiết yếu như:kem đánh răng, bóp đánh răng, giấy vệ sinh, băng vệ sinh, các đồ phục vụ cho học tập như bảng, thước kẻ, bút, mực, các loại đồ ăn nhanh... đa số hàng hóa đều rẻ và điều tiện lợi. Trong khi vẫn có thể thư thái thưởng thức ly cà phê đậm đà .</p>
           </div>
         </div>
       </div>
